feat: add synthesizer save as